--- a/battle/pubspec.yaml
+++ b/battle/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.0.5
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_test:
