--- a/battle/pubspec.yaml
+++ b/battle/pubspec.yaml
@@ -12,10 +12,12 @@ dependencies:
   provider: ^6.0.5
   web_socket_channel: ^2.4.0
 
-dev_dependencies:
+dev_dependencies: 
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/tileset_0.png
