--- a/battle/pubspec.yaml
+++ b/battle/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   provider: ^6.0.5
   web_socket_channel: ^2.4.0
+  get_it: ^7.6.0
 
 dev_dependencies: 
   flutter_test:
